Fixed Page Layout Issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,13 @@ body {
   background: var(--background);
 }
 
+html,
+body {
+  max-width: 100vw;
+  scroll-behavior: smooth;
+  font-size: var(--text-sm);
+}
+
 .home {
   display: grid;
   grid-template-columns: 60px 1fr;
@@ -52,6 +59,17 @@ body {
   overflow: hidden;
 }
 
+.hero {
+  margin-top: 4rem;
+  margin-bottom: 25rem;
+  padding: 4rem 2.5rem;
+  @media (max-width: 980px) {
+    padding: 0 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 4.8rem;
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -78,4 +96,64 @@ body {
   @media (max-width: 768px) {
     padding: 0 2.4rem;
   }
+}
+.sidebar {
+  a {
+    height: 100px;
+    flex-shrink: 0;
+    writing-mode: vertical-lr;
+    font-size: var(--text-sm);
+    font-weight: 200;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.5;
+    border-right: 1px solid transparent;
+    transition: 0.1s all;
+    width: 100%;
+  }
+
+  a:hover {
+    background: var(--background);
+    border-right: 1px solid var(--brand);
+    opacity: 1;
+  }
+
+  .selected {
+    background: var(--background);
+    border-right: 1px solid var(--brand);
+    opacity: 1;
+  }
+}
+
+.logo {
+  cursor: pointer;
+  flex-shrink: 0;
+
+  font-size: var(--text-md);
+  font-weight: 900;
+  line-height: 1;
+
+  width: 45px;
+  height: 45px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: var(--background);
+  border-radius: 4px;
+
+  margin: 1.8rem 0;
+
+  span {
+    font-size: var(--text-md);
+    font-weight: 900;
+    line-height: 1;
+    color: var(--brand);
+  }
+}
+
+.sideBar::-webkit-scrollbar {
+  display: none;
 }
